Micro-optimization fixing a FindBugs report.